@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-26T08:13:25Z",
-  "count_outdated" : 287,
-  "uniques_outdated" : 12,
-  "count" : 354,
+  "timestamp" : "2022-05-26T16:13:58Z",
+  "count_outdated" : 329,
+  "uniques_outdated" : 13,
+  "count" : 391,
   "uniques" : 20,
   "views" : [
-    {
-      "timestamp": "2022-05-12T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 42 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-14T00:00:00Z",
       "count": 2,
