@@ -1,12 +1,7 @@
 {
-  "count": 67,
+  "count": 62,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-05-12T00:00:00Z",
-      "count": 5,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-14T00:00:00Z",
       "count": 2,
