@@ -1,3 +1,10 @@
+2022-05-26T16:13:58Z:
+* notice: last 14d: unq all: 1 62
+* notice: prev accum: outdated-unq outdated-all / unq all: 12 287 / 20 354
+* notice: next accum: outdated-unq outdated-all / unq all: 13 329 / 20 391
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: changed dates: []
+
 2022-05-26T08:13:25Z:
 * notice: last 14d: unq all: 1 67
 * notice: prev accum: outdated-unq outdated-all / unq all: 12 287 / 20 377
